@@ -692,6 +692,7 @@ typedef struct _CPyMOL {
   ov_word lex_gradient_step_size;
   ov_word lex_gradient_spacing;
   ov_word lex_gradient_symmetry;
+  ov_word lex_ray_trace_color;
 
 } _CPyMOL;
 
@@ -1381,6 +1382,7 @@ static OVstatus PyMOL_InitAPI(CPyMOL *I)
   LEX_SETTING(gradient_step_size,543);
   LEX_SETTING(gradient_spacing,544);
   LEX_SETTING(gradient_symmetry,545);
+  LEX_SETTING(ray_trace_color,546);
 
   return_OVstatus_SUCCESS;
 }
